# FriAMGroup2_assignements

./: README.md  index.md  specs.md  test_sqaure.sh
.github/workflows/: cd-docs.yml  ci.yml
src/boundary_controller/: README.md  package.xml  setup.cfg  setup.py
src/boundary_controller/boundary_controller/: boundary_fsm.py  keyboard_teleop.py
src/boundary_controller/launch/: draw_boundaries.launch.py
src/patrol_fsm/: package.xml  setup.py
src/patrol_fsm/launch/: patrol_launch.py
src/patrol_fsm/patrol_fsm/: avoidance.py  fsm_states.py  patrol_node.py  siren.py
src/patrol_fsm/test/: test_avoidance.py  test_fsm_states.py
src/robot_sqaure_controller/: README.md  package.xml  setup.cfg  setup.py
src/robot_sqaure_controller/robot_square_controller/: square_action_server.py
src/robot_sqaure_controller/turtle_square_controller/: square_action_server.py
src/turtle_boundaries/: package.xml  setup.cfg  setup.py
src/turtle_boundaries/launch/: draw_boundaries.launch.py
src/turtle_boundaries/turtle_boundaries/: boundary_drawer.py  teleop_handler.py
src/turtle_fsm/: package.xml  setup.cfg  setup.py
src/turtle_fsm/launch/: draw_boundaries.launch.py  fsm_launch.py
src/turtle_fsm/turtle_fsm/: draw_boundaries_node.py  fsm_node.py  keyboard_node.py
src/turtle_square_controller/: package.xml  setup.cfg  setup.py
src/turtle_square_controller/turtle_square_controller/: draw_square_server.py  square_action_server.py
src/turtle_square_interfaces/: CMakeLists.txt  package.xml
src/turtle_square_interfaces/action/: DrawSquare.action
troubleshooting/: index.md
turtle_square_controller/: index.md
