<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>patrol_fsm</name>
  <version>0.0.0</version>
  <description>Security patrol FSM for iRobot Create3</description>
  <maintainer email="47320846+Alioune-diene@users.noreply.github.com">root</maintainer>
  <maintainer email="hiba.soleiman@etu.univ-grenoblealpes.fr">developper</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_srvs</depend>
  <depend>action_msgs</depend>
  <depend>irobot_create_msgs</depend>
  <depend>turtle_square_interfaces</depend>
  <depend>robot_square_controller</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
